--- a/OdeToFood/appsettings.json
+++ b/OdeToFood/appsettings.json
@@ -6,5 +6,6 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Message": "Hello from App Settings"
 }
